--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
             <artifactId>lombok</artifactId>
             <version>1.18.14</version>
         </dependency>
+
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>MTCG_Szabo</artifactId>
@@ -40,6 +41,11 @@
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.1</version>
         </dependency>
     </dependencies>
     <properties>
